# Enosis-Verwalter

./: .gitignore  meson.build  meson.options
config/meson/cross/: windows.meson
config/meson/native/: linux.meson  windows.meson
include/Enosis/: enman.h
include/Enosis/enui/: enui.h
include/Enosis/enver/: enver.hpp
include/enosis/: enman.hpp
src/bestand/: erstellen_datenbank.cpp  erstellen_tabelle.cpp  meson.build
src/bestand/ausgabe/: hinzufuegen.cpp
src/bestand/ea/: loeschen.cpp
src/bestand/eingabe/: lesen.cpp
src/database/: meson.build
src/db/: create_table.cpp  meson.build
src/db/output/: add.cpp
src/enman/: free.cpp  init.cpp  loop.cpp  main.cpp  meson.build
src/enui/: meson.build
src/enui/wayland/: fenster.c
src/enui/xlib/: fenster.c
src/gui/: meson.build
src/kern/: aktualisieren.cpp  enver.cpp  freigeben.cpp  hauptfunktion.cpp  initialiseren.cpp  meson.build
