# **********************************
# *** Author: Enosis Technology  ***
# *** Date:   April 17 from 2026 ***
# *** Update: April 17 from 2026 ***
# *** License: AGPL-3-or-later   ***
# **********************************

# *****************
# *** CPP Files ***
# *****************

DATEL_BESTAND_CPP = files(
	'ausgabe/hinzufuegen.cpp',
	'ea/loeschen.cpp',
	'eingabe/lesen.cpp',
	'erstellen_datenbank.cpp',
	'erstellen_tabelle.cpp'
)