# **********************************
# *** Author: Enosis Technology  ***
# *** Date:   April 17 from 2026 ***
# *** Update: April 17 from 2026 ***
# *** License: AGPL-3-or-later   ***
# **********************************

# ***************
# *** C Files ***
# ***************

C_FILES_DB = files(
				'add.c',
				'delete.c'
			)

# *****************
# *** CPP Files ***
# *****************

CPP_FILES_DB = files(
					'consult.cpp'
				)