# **********************************
# *** Author: Enosis Technology  ***
# *** Date:   April 17 from 2026 ***
# *** Update: April 17 from 2026 ***
# *** License: AGPL-3-or-later   ***
# **********************************

# *****************
# *** CPP Files ***
# *****************

DATEL_ENUI_XLIB_C = files(
	'xlib/fenster.c',
	'xlib/schaltfläche.c'
)

DATEL_ENUI_WAYLAND_C = files(
	'wayland/fenster.c',
	'wayland/schaltfläche.c'
)