# **********************************
# *** Author: Enosis Technology  ***
# *** Date:   April 17 from 2026 ***
# *** Update: April 17 from 2026 ***
# *** License: AGPL-3-or-later   ***
# **********************************

# *****************
# *** CPP Files ***
# *****************

CPP_FILES_GUI = files(
					'window.cpp',
					'buttom.cpp'
				)