# **********************************
# *** Author: Enosis Technology  ***
# *** Date:   April 17 from 2026 ***
# *** Update: April 17 from 2026 ***
# *** License: AGPL-3-or-later   ***
# **********************************

# *****************
# *** CPP Files ***
# *****************

DATEL_KERN_CPP = files(
	'aktualisieren.cpp',
	'enver.cpp',
	'freigeben.cpp',
	'hauptfunktion.cpp',
	'initialiseren.cpp'
)